--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
     id("com.google.devtools.ksp")
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -55,6 +56,10 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation"androidx.room:room-ktx:$room_version"
     ksp"androidx.room:room-compiler:$room_version"
+
+    implementation "com.google.dagger:hilt-android:2.47"
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
+    ksp "com.google.dagger:hilt-compiler:2.47"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
